secureApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secureapp
  namespace: secureapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  tls:
    - hosts: [ "secureapp.local" ]
      secretName: secureapp-tls
  rules:
    - host: secureapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secureapp
                port: { number: 80 }
